--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     </head>
     <body>
         <div id='app'>
-            <button @click='clickLog' @mouseenter='hoverLog'>ログ</button>
+            <label>
+                <input type='checkbox' v-model='reserve'>予約する
+            </label>
+            <div v-show='reserve'>
+                予約日: <input type='date'>
+           </div>
         </div>
         <script src='./index.js'></script>
     </body>
