--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     </head>
     <body>
         <div id='app'>
-            <label>
-                <input type='checkbox' v-model='reserve'>予約する
-            </label>
-            <div v-show='reserve'>
-                予約日: <input type='date'>
-           </div>
+            <div v-if='message'>
+                {{ message }}
+            </div>
+            <div v-else-if='message === ""'>
+                メッセージが空文字です
+            </div>
+            <div v-else>
+                メッセージがありません
+            </div>
         </div>
         <script src='./index.js'></script>
     </body>
