--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <script src='https://cdn.jsdelivr.net/npm/vue/dist/vue.js'></script>
     </head>
     <body>
-        <div id='app'>
-            
+        <div id="app">
+            <user-list></user-list>
         </div>
         <script src='./index.js'></script>
     </body>
